Fix T41983: Array regression with center-verts

Array with rotation and a central pivot would fail.

Thanks to Bastien Montagne for the initial fix.